<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".nav_window_activity.AuthorsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="2"
        android:background="@drawable/round_corners">

        <LinearLayout
            android:id="@+id/appInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_number"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/shortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/short_description"
                android:textAlignment="viewStart"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/authorsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/authors_window_title_authors"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/authorsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_corners"
                android:ems="10"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/translateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/authors_window_title_translations"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/translateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_corners"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/thanksTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/authors_window_title_thanks"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/thanksText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_corners"
                android:padding="10dp"
                android:text="@string/thanks"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>